--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Punch & Plate. All Rights Reserved.</p>
+        <p id="intro-text">&copy; 2024 Punch & Plate. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
