--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 id="main-title">Punch & Plate</h1>
     <section id="home">
         <h2>Home</h2>
     </section>
