--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     <div class="shape"></div>
-    <h1 id="main-title">Punch & Plate</h1>
-    <section id="home">
+    <h1 class="main-title">Punch & Plate</h1>
+    <section class="hareketli">
         <h2>Home</h2>
     </section>
 
-    <section id="about">
+    <section class="hareketli">
         <h2>About Me</h2>
     </section>
 
-    <section id="blog">
+    <section class="hareketli">
         <h2>Blog Posts</h2>
     </section>
 
-    <section id="contact">
+    <section class="hareketli">
         <h2>Contact</h2>
     </section>
 
