--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
 <body>
     <div class="shape"></div>
     <h1 class="main-title">Punch & Plate</h1>
-    <section class="hareketli">
+   
+    
+    <section class="hover-section">
         <h2>Home</h2>
     </section>
 
-    <section class="hareketli">
+   <section class="hover-section">
         <h2>About Me</h2>
     </section>
 
-    <section class="hareketli">
+    <section class="hover-section">
         <h2>Blog Posts</h2>
     </section>
 
-    <section class="hareketli">
+    <section class="hover-section">
         <h2>Contact</h2>
     </section>
 
