--- a/index.html
+++ b/index.html
@@ -7,30 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="shape"></div>
+<header>
     <h1 class="main-title">Punch & Plate</h1>
-   
-    
+</header>
+<aside class="sidebar">
     <section class="hover-section">
         <h2>Home</h2>
     </section>
-
-   <section class="hover-section">
+    <section class="hover-section">
         <h2>About Me</h2>
     </section>
-
     <section class="hover-section">
         <h2>Blog Posts</h2>
     </section>
-
     <section class="hover-section">
         <h2>Contact</h2>
     </section>
-
-    <footer>
-        <p id="intro-text">&copy; 2024 Punch & Plate. All Rights Reserved.</p>
-    </footer>
-
-    <script src="script.js"></script>
+</aside>
+<footer>
+    <p id="intro-text">&copy; 2024 Punch & Plate. All Rights Reserved.</p>
+</footer>
+<script src="script.js"></script>
 </body>
 </html>
